# StriatumACC

./: .gitignore  CLAUDE.md  NOTES.md  Raw_data_bin  ReadChannel.m  ReadMeta.m  Synch_NP_VR.m  V_allData_1ms.m  lick_correction.m  lick_correction_Vishal.m  raw_data_bin.m
Striatum project/cca/: .gitignore  NOTES.md  RESULTS.md  UNDERSTANDING.md  conftest.py  pyproject.toml
Striatum project/cca/scripts/: committed_ifi.py  compare_nulls.py  epoch_anova.py  plot_common_units.py  plot_factorial.py  plot_ifi_fs.py  plot_parcoords.py  plot_partial.py  plot_stage2.py  plot_stage3.py  plot_subspace_similarity.py  run_committed.py  run_partial.py  run_stage2.py  run_stage3.py  stage1_validate.py  summarise_sweep.py
Striatum project/cca/src/striatum_cca/: __init__.py  analysis.py  config.py  core.py  crosspair.py  dataio.py  epoch_stats.py  lagged.py  membership.py  partial.py  pipeline.py  stage3.py  subspace.py  surrogate.py  sweep.py
Striatum project/cca/tests/: test_analysis.py  test_core.py  test_crosspair.py  test_dataio.py  test_epoch_stats.py  test_lagged.py  test_membership.py  test_partial.py  test_pipeline.py  test_stage3.py  test_subspace.py  test_surrogate.py
Striatum project/popsim/: .gitignore  NOTES.md  README.md  conftest.py  pyproject.toml
Striatum project/popsim/scripts/: generate_datasets.py  plot_scenarios.py  recovery_benchmark.py  striatum_cca_demo.py
Striatum project/popsim/tests/: test_benchmark.py  test_bridge.py  test_coupling.py  test_latents.py  test_metrics.py  test_observation.py  test_realism.py  test_scenarios.py  test_scenarios_extra.py
(+153 files in other folders)
